# dyn_miner

./: .clang-format  CMakeLists.txt  readme.md
dyn_miner/: CMakeLists.txt  dyn_miner.cl  dyn_miner.cpp  dyn_miner_gpu.cpp  dyn_miner_gpu.h  dyn_stratum.h  dynhash.cpp  dynhash.h  dynprogram.cpp  dynprogram.h
dyn_miner/core/: sha256.cpp
dyn_miner/util/: hex.h  rand.h  sockets.h  stats.h  version.h
scripts/: release.sh
